frontend/src/admin/ui/index.css
@import url("https://fonts.googleapis.com/css?family=Noto+Sans");

html,
body,
#root,
.hav-admin-app {
  height: 100vh;
  width: 100vw;
  font-size: 16px;
  font-family: "Noto Sans", sans-serif;
  overflow: hidden;
}

.hav-admin-app {
  display: flex;
}

.hav-admin-content {
  flex-grow: 1;
  overflow: auto;
  padding: 1.5rem;
}

.hav-admin-main-menu {
  min-height: 100%;
  background-color: #f8b20c;
  flex-grow: 0;
  flex-shrink: 0;
  flex-basis: 20vw;
  display: flex;
  flex-direction: column;
}

.hav-admin-main-menu nav {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 1rem;
}

.hav-admin-main-menu > img {
  /* display: none; */
  max-width: 80%;
  margin: 0.5em 10%;
  height: auto;
}

.loading-container {
  height: 100vh;
  width: 100%;
}

.react-icon {
  vertical-align: middle;
}

